Build with Java 25 (#774)
* Build with Java 25

Signed-off-by: Thomas Segismont <tsegismont@gmail.com>

* Use virtual threads

Virtual threads allow to simplify a bit the generator code and tests.

Also, use a few modern Java constructs

Signed-off-by: Thomas Segismont <tsegismont@gmail.com>

* Used the Process API from the JDK

Signed-off-by: Thomas Segismont <tsegismont@gmail.com>

* Minor simplification of TempDir

Signed-off-by: Thomas Segismont <tsegismont@gmail.com>

* Update AnalyticsTest

Signed-off-by: Thomas Segismont <tsegismont@gmail.com>

* Wait longer until project started

Kotlin projects built using Gradle without daemon can take some time to complete

Signed-off-by: Thomas Segismont <tsegismont@gmail.com>

---------

Signed-off-by: Thomas Segismont <tsegismont@gmail.com>